<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="#E3F2FD"
    android:orientation="vertical"
    android:weightSum="1">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <ImageView
            android:id="@+id/perfilImageView"
            android:layout_width="101dp"
            android:layout_height="101dp"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:background="@drawable/botao"
            app:srcCompat="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/alterarButton"
            android:layout_width="211dp"
            android:layout_height="36dp"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_row="0"
            android:background="@drawable/botao"
            android:hint="@string/changeName"
            android:textColorHint="@color/corBotao" />

        <Button
            android:id="@+id/fotoButton"
            android:layout_width="211dp"
            android:layout_height="36dp"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_row="1"
            android:background="@drawable/botao"
            android:hint="@string/takePic"
            android:textColorHint="@color/corBotao" />

        <TextView
            android:id="@+id/bemVindotextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="2"
            android:fontFamily="sans-serif"
            android:hint="@string/welcome"
            android:padding="3dp"
            android:textColorHint="@color/corLetras"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/nomeTextView"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="2"
            android:padding="3dp"
            android:textColor="@color/corLetras" />

        <Button
            android:id="@+id/iniciarButton"
            android:layout_width="114dp"
            android:layout_height="36dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_row="3"
            android:background="@drawable/botao"
            android:hint="@string/start"
            android:textColorHint="@color/corBotao" />

        <TextView
            android:id="@+id/numeroPontuacaoTextView"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_row="6"
            android:padding="3dp"
            android:textColor="@color/corLetras" />

        <TextView
            android:id="@+id/capitalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="4"
            android:hint="@string/capital"
            android:padding="3dp"
            android:textColorHint="@color/corLetras" />

        <TextView
            android:id="@+id/paisTextView"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="4"
            android:padding="3dp"
            android:textColor="@color/corFonte" />

        <TextView
            android:id="@+id/respostaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="5"
            android:hint="@string/answer"
            android:padding="3dp"
            android:textColorHint="@color/corLetras" />

        <EditText
            android:id="@+id/respostaEditText"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            android:ems="10"
            android:inputType="text"
            android:padding="3dp"
            android:textColorHint="@color/corLetras"
            android:textColorLink="@color/fundos" />

        <TextView
            android:id="@+id/tentativaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="7"
            android:hint="@string/tentativa"
            android:padding="3dp"
            android:textColorHint="@color/corLetras" />

        <TextView
            android:id="@+id/numeroTextView"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_row="7"
            android:padding="3dp"
            android:textColor="@color/corLetras" />


        <Button
            android:id="@+id/okButton"
            android:layout_width="125dp"
            android:layout_height="36dp"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="6"
            android:layout_rowSpan="2"
            android:background="@drawable/botao"
            android:text="Ok"
            android:textColor="@color/corBotao" />

        <TextView
            android:id="@+id/pontuacaoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="6"
            android:hint="@string/pontuacao"
            android:padding="3dp"
            android:textColorHint="@color/corLetras" />

    </GridLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="362dp"
        tools:context="com.example.pcgravacao.bossinip1.MapsActivity" />

</LinearLayout>










